<resources>
    <string name="app_name">Static IP</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="clear_db">Clear DB</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="generate_vehicle">Generate IP</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="ip_address">IP Address</string>
    <string name="mac_address">MAC address</string>
    <string name="device_type">Device Type</string>
    <string name="device_name">Device Name</string>

    <string-array name="device_type_array">
        <item>Server</item>
        <item>"Desktop"</item>
        <item>"Laptop"</item>
        <item>"Mobile"</item>
        <item>"Raspberry Pi"</item>
        <item>"Other"</item>
    </string-array>
</resources>
