<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.netwokz.staticip.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24px"
        android:title="@string/refresh"
        app:showAsAction="always" />

    <!--<item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_autorenew"
        android:title="@string/refresh"
        app:showAsAction="always" />
     -->
    <item
        android:id="@+id/action_add_generated_car"
        android:orderInCategory="100"
        android:title="@string/generate_vehicle" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="50"
        android:title="@string/settings" />

    <item
        android:id="@+id/action_clear_db"
        android:orderInCategory="100"
        android:title="@string/clear_db" />
</menu>
